--- a/CosmoAssailants/nbproject/private/private.properties
+++ b/CosmoAssailants/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\petri\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=/cs/fs/home/ptpihlaj/.netbeans/7.3.1/build.properties
